Fixed logo height and arrow width for svgs on ie

--- a/_scss/uxeskimo/_creations.scss
+++ b/_scss/uxeskimo/_creations.scss
@@ -37,6 +37,7 @@ Creations
 .creation-nav {
   text-align: left;
   .creations-arrow svg {
+    height: 16px;
     width: 16px;
     margin-right: 10px;
   }
