--- a/_scss/uxeskimo/_header.scss
+++ b/_scss/uxeskimo/_header.scss
@@ -22,6 +22,7 @@ Header
   }
   svg {
     height: 53px;
+    width: 53px;
     float: left;
   }
   .intitals {
